--- a/README.adoc
+++ b/README.adoc
@@ -24,7 +24,7 @@
 [.hidden]
 NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the  https://openliberty.io/guides/{projectid}.html[Open Liberty website].
 
-Learn how to containerize and run your microservices with Open Liberty using Docker.
+Learn how to containerize and run your microservices with Open Liberty using Podman.
 
 // =================================================================================================
 //  What you'll learn
@@ -37,7 +37,7 @@ From development to production, and across your DevOps environments, you can dep
 
 You'll learn how to build container images and run containers using https://www.docker.com/[Docker^] for your microservices. You'll learn about the https://github.com/OpenLiberty/ci.docker[Open Liberty container images^] and how to use them for your containerized applications. You'll construct `Dockerfile` files, create Docker images by using the `docker build` command, and run the image as Docker containers by using `docker run` command.
 
-The two microservices that you'll be working with are called `system` and `inventory`. The `system` microservice returns the JVM system properties of the running container. The `inventory` microservice adds the properties from the `system` microservice to the inventory. This guide demonstrates how both microservices can run and communicate with each other in different Docker containers. 
+The two microservices that you'll be working with are called `system` and `inventory`. The `system` microservice returns the JVM system properties of the running container. The `inventory` microservice adds the properties from the `system` microservice to the inventory. This guide demonstrates how both microservices can run and communicate with each other in different Podman containers. 
 
 == Additional prerequisites
 
